crates/analyzer/tests/snapshots/errors__return_lt_mixed_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: type mismatch
  ┌─ compile_errors/return_lt_mixed_types.fe:3:20
  │
3 │         return x < y
  │                    ^ this has type `u256`; expected type `u128`


